[tool.poetry]
name = "findme"
version = "0.1.0"
description = "Shared code for the findme project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aws-lambda-powertools = "^2.35.1"
python-jose = "^3.3.0"
cryptography = "^42.0.5"
six = "^1.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
